--- a/index.css
+++ b/index.css
@@ -1,4 +1,7 @@
+/*CSS is the bane of my existence*/
+
 #main {
+  /* this is the main div. it holds everything */
   /* border: 2px solid; */
   width: 1440px;
   height: 840px;
@@ -6,6 +9,7 @@
 }
 
 #group9 {
+  /* this is the left side writeup. i just called it this cause it's what i saw on the figma - unimaginative, i know. Sue me. */
   width: 460px;
   height: 275px;
   /* border: solid; */
@@ -16,23 +20,33 @@
 #logo {
   width: 77px;
   height: 80px;
-  margin-left: -7px;
+  margin-left: -7px; /* logo came with a bit of flesh, so i used this to cut it out */
 }
 
 #header {
   width: 268px;
   height: 50px;
   color: hsla(174, 100%, 2%, 1);
-  font-family: sans-serif;
+  font-family: sans-serif; /*I bled and suffered for this font. Just couldn't find a brown font*/
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
 
-#content {
+#content1 {
+  /* The writeup is different in both orientations, so this will show the first writeup in the larger orientation */
+  display: block;
   width: 480px;
   height: 75px;
   color: hsla(0, 0%, 45%, 1);
 }
 
+#content2 {
+  /* The secod writeup will be invinsible in the larger orientation - Oh yeah, i still need to watch invicible 2... I should probably just read the comics.*/
+  display: none;
+}
+
 #registeration-box {
+  /* this holds the right hand side registration box. it has two divs inside. */
   width: 580px;
   height: 710px;
   margin-top: 81px;
@@ -44,6 +58,7 @@
 }
 
 div#form1-container {
+  /* the form1-container is for the first part of the registration box. It holds the first six inputs. */
   width: 100%;
   margin-top: 20px;
   display: flex;
@@ -70,6 +85,7 @@ form div#form1-container div.form1 label {
 }
 
 div#form2-container {
+  /* this holds the last two input and select in the form, as well as the register button. */
   width: 100%;
   margin-top: 30px;
   display: flex;
@@ -97,6 +113,7 @@ form div#form2-container div.form2 select {
   margin-top: 8px;
 }
 form div#form2-container div.form2 label {
+  /* Not the best alternative font, but it does the job well enough. My eyes hurt. */
   font-family: "Unbounded", sans-serif;
   font-size: 13px;
 }
@@ -110,22 +127,164 @@ button {
   border: 0px;
 }
 
-form p {
+a {
+  /* Tore the link to pieces. */
+  text-decoration: none;
+  color: hsla(174, 62%, 47%, 1);
+}
+
+#license-agreement1 {
+  /* Due to teh different placements in the larger and smaller orientations,
+  I had to put in two agreements. one outside the form and another one inside the form 
+  (you have no idea how cruel you are for doing that) */
+  display: block; /* This agreement will show */
+  font-family: "Unbounded", sans-serif;
+  font-size: 11px;
+  text-align: center;
+}
+#license-agreement2 {
+  display: none; /* This agreement will not show */
   font-family: "Unbounded", sans-serif;
   font-size: 11px;
   text-align: center;
 }
 
-form p a {
-  text-decoration: none;
-  color: hsla(174, 62%, 47%, 1);
+#phone-island {
+  /* This is the phone island - obviously*/
+  /* It won't show up in the larger orientation */
+  display: none;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
+  /* The date input looked rickity, so i got rid of the icon and changed it */
   display: none;
 }
 
 /* Create a custom calendar icon */
 input[type="date"] {
   background: url("u_a_calendar-alt.png") no-repeat;
+}
+
+/* I liked this more than i thought i would. */
+@media (max-width: 500px) {
+  #main {
+    /* border: solid; */
+    flex-direction: column;
+    width: 375px;
+    height: 1294px;
+  }
+  #group9 {
+    margin-left: 24px;
+    margin-top: 30px;
+    width: 327px;
+    height: 222px;
+  }
+  #registeration-box {
+    margin-top: 40px;
+    margin-left: 24px;
+    width: 327px;
+    height: 870px;
+  }
+  #phone-island {
+    /* Phone-island shows up on phone. */
+    display: block;
+  }
+  div#form1-container {
+    flex-wrap: nowrap;
+    flex-direction: column;
+    margin-left: 16px;
+  }
+  div.form1 {
+    width: 295px;
+    height: 72px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  #content2 {
+    display: block;
+    width: 327px;
+    height: 50px;
+    color: hsla(0, 0%, 45%, 1);
+  }
+
+  #content1 {
+    display: none;
+  }
+
+  #logo {
+    /* This was annoying. Don't change anything. */
+    width: 45.67px;
+    height: 47px;
+    margin-left: -8px;
+  }
+
+  #header {
+    margin-top: 33px;
+    margin-bottom: 12px;
+  }
+
+  form div#form1-container div.form1 input {
+    height: 48px;
+    border-radius: 2px;
+    border: 1px;
+  }
+  form div#form1-container div.form1 select {
+    height: 48px;
+    border-radius: 2px;
+    border: 1px;
+  }
+
+  form div#form1-container div.form1 label {
+    font-size: 11px;
+  }
+
+  div#form2-container {
+    margin-top: 24px;
+    gap: 24px;
+  }
+
+  div.form2 {
+    width: 295px;
+    height: 72px;
+    margin-top: 0px;
+  }
+
+  form div#form2-container div.form2 input {
+    width: 295px;
+    height: 48px;
+    margin-top: 8px;
+    border-radius: 2px;
+    border: 1px;
+  }
+  form div#form2-container div.form2 select {
+    width: 295px;
+    height: 48px;
+    margin-top: 8px;
+    border-radius: 2px;
+    border: 1px;
+  }
+
+  button {
+    width: 295px;
+  }
+
+  #license-agreement2 {
+    /* Switched the agreement places. so the one outside the form shows up on the smaller orientation */
+    display: block;
+    margin-top: 54px;
+  }
+  #license-agreement1 {
+    /* license agreement gone */
+    display: none;
+  }
+
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+  }
+
+  /* Create a custom calendar icon */
+  input[type="date"] {
+    /* I made a longer background to properly fit the new input length */
+    background: url("u_a_calendar-alt2.png") no-repeat;
+  }
 }
